# PaCHash-Experiments

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  StoreComparisonItem.h  leveldb_test.h  main.cpp  rocksdb.cpp  siltConfig.xml  siltConfigSorted.xml  test_chd.h  test_cuckoo.h  test_leveldb.h  test_pachash.h  test_recsplit.h  test_rocksdb.h  test_separator.h  test_silt.h  test_std_unordered_map.h  utils.h
competitors/: Chd.h  FlatHashMap.h  LevelDb.h  PTHash.h  PaCHash.h  ParallelCuckoo.h  RecSplit.h  RocksDb.h  Separator.h  Silt.h  siltConfig.xml  siltConfigSorted.xml  std_unordered_map.h
patches/: README.md  apply-patches.sh  format-patches.sh  leveldb.patch  pthash.patch  rocksdb.patch  silt.patch  sux.patch
scripts/: .gitignore  Dockerfile  comparisonPlot.tex  competitorNames.txt  constructionSuccessObjectSize.sh  differentPaCHashConfigs.sh  docker-compose.yml  figure-2.tex  figure-4.tex  objectSizeBlocksFetched.sh
scripts/dockerVolume/: figure-2.sh  figure-4.sh  runscript.sh
