cmake_minimum_required(VERSION 3.21)
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
project(ObjectStoreComparison)

set(CMAKE_CXX_STANDARD 17)

add_executable(ObjectStoreComparison main.cpp)

set(WITH_TESTS OFF)
set(WITH_BENCHMARK_TOOLS OFF)
set(WITH_CORE_TOOLS OFF)
set(WITH_TOOLS OFF)
set(WITH_GFLAGS OFF)
set(WITH_LIBURING ON)
set(ROCKSDB_BUILD_SHARED OFF)
add_subdirectory(external/rocksdb)
target_link_libraries(ObjectStoreComparison PUBLIC rocksdb)
target_include_directories(ObjectStoreComparison PUBLIC external/rocksdb/include)

set(LEVELDB_BUILD_TESTS OFF)
set(LEVELDB_BUILD_BENCHMARKS OFF)
set(LEVELDB_INSTALL OFF)
add_subdirectory(external/leveldb)
target_link_libraries(ObjectStoreComparison PUBLIC leveldb)
target_include_directories(ObjectStoreComparison PUBLIC external/leveldb/include)

file(GLOB silt_SRC external/silt/fawnds/*.cc external/silt/fawnds/*.cpp)
list(FILTER silt_SRC EXCLUDE REGEX ".*fawnds_sf_ordered_binarysearch\\.cc$")
file(GLOB silt_cindex_SRC external/silt/fawnds/cindex/*.cpp)
list(FILTER silt_cindex_SRC EXCLUDE REGEX ".*bench_SOSP\\.cpp$")
file(GLOB silt_util_SRC external/silt/utils/*.cc)
add_library(silt ${silt_SRC} ${silt_cindex_SRC} ${silt_util_SRC})
target_include_directories(silt PUBLIC external/silt/fawnds)
target_include_directories(silt PUBLIC external/silt/fawnds/cindex)
target_include_directories(silt PUBLIC external/silt/utils)
find_package (XercesC REQUIRED)
find_package(OpenSSL REQUIRED)
target_link_libraries(silt PUBLIC ${XercesC_LIBRARIES} ${OPENSSL_LIBRARIES} gsl cblas)
set_property(TARGET silt PROPERTY POSITION_INDEPENDENT_CODE ON)
target_link_libraries(ObjectStoreComparison PUBLIC silt)

add_subdirectory(external/pachash)
target_link_libraries(ObjectStoreComparison PUBLIC PaCHash)
